<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#30383A"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/choose_board_size"
        android:textColor="#A5FDC1"
        android:textSize="38sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/threebythree"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:background="#A5FDC1"
            android:text="@string/_3_x_3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/fivebyfive"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:background="#A5FDC1"
            android:text="@string/_5_x_5"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>