<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#30383A"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp">

        <TextView
            android:id="@+id/player1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginStart="40sp"
            android:layout_marginLeft="40sp"
            android:text="@string/player_1"
            android:textColor="#A5FDC1"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/versus"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_weight="1"
            android:text="@string/vs"
            android:textColor="#A5FDC1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/player2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40sp"
            android:layout_marginRight="40sp"
            android:layout_weight="1.5"
            android:text="@string/player_2"
            android:textColor="#A5FDC1"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp">

        <TextView
            android:id="@+id/text_view_player1score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginStart="70sp"
            android:layout_marginLeft="40sp"
            android:text="0"
            android:textColor="#A5FDC1"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_weight="1"
            android:text=""
            android:textColor="#A5FDC1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_player2score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="40sp"
            android:layout_weight="1.5"
            android:text="0"
            android:textColor="#A5FDC1"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="374dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <TableRow>

            <Button
                android:id="@+id/button00"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button01"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button02"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button10"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button20"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button21"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

            <Button
                android:id="@+id/button22"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="8dp"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/resetboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:background="#A5FDC1"
            android:text="@string/reset_board"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="25sp"/>
    </LinearLayout>

</LinearLayout>