<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#30383A"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginStart="40sp"
            android:layout_marginLeft="40sp"
            android:text="@string/player_1"
            android:textColor="#A5FDC1"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/versus"
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_weight="1"
            android:text="@string/vs"
            android:textColor="#A5FDC1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginEnd="40sp"
            android:layout_marginRight="40sp"
            android:text="@string/player_2"
            android:textColor="#A5FDC1"
            android:textStyle="bold"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp">

        <TextView
            android:id="@+id/player1score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginStart="70sp"
            android:layout_marginLeft="40sp"
            android:text="0"
            android:textColor="#A5FDC1"
            android:textStyle="bold"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginLeft="20sp"
            android:layout_weight="1"
            android:text=""
            android:textColor="#A5FDC1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginEnd="20sp"
            android:layout_marginRight="40sp"
            android:text="0"
            android:textColor="#A5FDC1"
            android:textStyle="bold"
            android:textSize="24sp"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TableRow>
            <Button
                android:id="@+id/button_00"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_02"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_03"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_04"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_14"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_20"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_21"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_22"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_23"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_30"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_31"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_32"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_33"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_34"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/button_40"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_41"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_42"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_43"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button_44"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#A5FDC1"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />
        </TableRow>



    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/resetboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:background="#A5FDC1"
            android:text="Reset Board"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="25sp"/>
    </LinearLayout>

</LinearLayout>